--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     //recyclerview
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
-
+    //FireStore
+    implementation 'com.google.firebase:firebase-firestore:21.5.0'
 
 }
