--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,14 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'kotlin-android'
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.0"
-
+    compileOptions {
+        // Sets Java compatibility to Java 8
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     defaultConfig {
         applicationId "com.geektech.geektech"
         minSdkVersion 17
@@ -28,15 +33,16 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
-    implementation 'androidx.navigation:navigation-fragment:2.1.0'
-    implementation 'androidx.navigation:navigation-ui:2.1.0'
+    implementation 'androidx.navigation:navigation-fragment:2.3.0'
+    implementation 'androidx.navigation:navigation-ui:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     //индикатор
     implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:4.1.2'
@@ -64,6 +70,15 @@ dependencies {
 
     //recyclerview
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:22.2.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
+    implementation "org.koin:koin-core:2.0.1"
+    implementation 'com.mindorks.android:prdownloader:0.5.0'
+
+    implementation 'com.github.haarigerharald:android-youtubeextractor:2.1.0'
+
+    implementation 'com.google.android.exoplayer:exoplayer:2.8.4'
 
     //FireStore
     implementation 'com.google.firebase:firebase-firestore:21.5.0'
