--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.geektech.geektech">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".presenter.App"
         android:allowBackup="true"
@@ -11,19 +13,17 @@
         android:roundIcon="@android:color/white"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".ui.detailLesson.DetailVideoActivity"></activity>
         <activity
             android:name=".оnBoard.OnBoardActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar"
-            tools:ignore="InnerclassSeparator,LockedOrientationActivity"/>
-
+            tools:ignore="InnerclassSeparator,LockedOrientationActivity" />
         <activity
             android:name=".authorization.PhoneActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             tools:ignore="LockedOrientationActivity" />
-
         <activity
             android:name=".splash.Splash"
             android:screenOrientation="portrait"
@@ -35,7 +35,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
