--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     //firebase
     implementation 'com.google.firebase:firebase-auth:19.3.2'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.google.firebase:firebase-firestore:21.6.0'
 
     //room
     implementation "android.arch.persistence.room:runtime:1.1.1"
@@ -70,6 +71,7 @@ dependencies {
 
     //recyclerview
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
     //noinspection GradleCompatible
     implementation 'com.android.support:design:22.2.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
