--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,12 @@
         android:label="@string/app_name"
         android:roundIcon="@android:color/white"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".ui.detailLesson.DetailVideoActivity"></activity>
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
+        tools:targetApi="m">
+        <activity
+            android:name=".ui.detailLesson.DetailVideoActivity"
+            tools:ignore="Instantiatable" />
         <activity
             android:name=".оnBoard.OnBoardActivity"
             android:screenOrientation="portrait"
@@ -37,9 +41,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
-        </activity>
-
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
