--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.preference:preference:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -56,7 +57,6 @@ dependencies {
     //firebase
     implementation 'com.google.firebase:firebase-auth:19.3.2'
     implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.google.firebase:firebase-firestore:21.6.0'
 
     //room
     implementation "android.arch.persistence.room:runtime:1.1.1"
@@ -83,7 +83,12 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer:2.8.4'
 
     //FireStore
-
     implementation 'com.google.firebase:firebase-firestore:21.5.0'
 
+    //ButterKnife
+    implementation 'com.jakewharton:butterknife:10.2.3'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
+
+    //ucrop photo
+    implementation 'com.github.yalantis:ucrop:2.2.5'
 }
