--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,8 @@
         android:label="@string/app_name"
         android:roundIcon="@android:color/white"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true"
-        tools:targetApi="m">
-        <activity
-            android:name=".ui.detailLesson.DetailVideoActivity"
-            tools:ignore="Instantiatable" />
+        android:theme="@style/AppTheme">
+        <activity android:name=".ui.detailLesson.DetailVideoActivity"></activity>
 
         <activity
             android:name=".оnBoard.OnBoardActivity"
@@ -46,7 +42,9 @@
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" />
+            android:label="@string/app_name">
+        </activity>
+
 
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
